--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@
             <testResource>
                 <directory>grammars</directory>
             </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
         </testResources>
         <plugins>
 <!--                        <plugin>
