--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,123 @@
             <version>2.44.0</version>
         </dependency>
         <dependency>
+            <groupId>hg4hom</groupId>
+            <artifactId>hg4hom</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/hg4hom-2.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>openjava</groupId>
+            <artifactId>openjava</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/openjava-1.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>evosuite</groupId>
+            <artifactId>evosuite</artifactId>
+            <version>1.0.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/evosuite-1.0.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>hymo</groupId>
+            <artifactId>hymo</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/hymo-1.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>tools</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/tools-1.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.uma.jmetal</groupId>-->
+        <!--<artifactId>jmetal-algorithm</artifactId>-->
+        <!--<version>5.2-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.uma.jmetal</groupId>-->
+        <!--<artifactId>jmetal-core</artifactId>-->
+        <!--<version>5.2-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.uma.jmetal</groupId>-->
+        <!--<artifactId>jmetal-problem</artifactId>-->
+        <!--<version>5.2-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.uma.jmetal</groupId>-->
+        <!--<artifactId>jmetal-exec</artifactId>-->
+        <!--<version>5.2-SNAPSHOT</version>-->
+        <!--</dependency>  -->
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.1</version>
+            <!--<classifier>test-sources</classifier>-->
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-all</artifactId>
+            <version>5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.48</version>
+        </dependency>
+        <dependency>
             <groupId>com.opera</groupId>
             <artifactId>operadriver</artifactId>
             <scope>test</scope>
@@ -76,6 +193,9 @@
             </testResource>
             <testResource>
                 <directory>src/test/resources</directory>
+                <includes>
+                    <include>*.bnf</include>
+                </includes>
             </testResource>
         </testResources>
         <!--<plugins>-->
