Creating Sentinel's main class.

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,8 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 nbproject/
+
+
+### Sentinel Specific ###
+/training/**/result/
+/training/**/compile_output/
