Created Sentinel's main class. Training options are working properly.

--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,7 @@ nbproject/
 
 
 ### Sentinel Specific ###
-/training/**/result/
-/training/**/compile_output/
+/training/**
+!/training/classes
+!/training/src
+!/training/test
