Did some adjustments on hg4hom to work with Linux. Everything appear to be working.

--- a/.gitignore
+++ b/.gitignore
@@ -175,8 +175,7 @@ nbproject/
 
 
 ### Sentinel Specific ###
-/training/**
-!/training/classes
-!/training/src
-!/training/test
+training/result
 lib/.index/
+/training/compile_output
+*.out
