--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>1.1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-command-line</artifactId>
+            <version>1.1.11</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -152,32 +162,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <build>
-        <resources>
-            <resource>
-                <directory>grammars</directory>
-            </resource>
-            <resource>
-                <directory>training</directory>
-                <excludes>
-                    <exclude>result/**</exclude>
-                </excludes>
-            </resource>
-        </resources>
-        <testResources>
-            <testResource>
-                <directory>grammars</directory>
-            </testResource>
-            <testResource>
-                <directory>training</directory>
-                <excludes>
-                    <exclude>result/**</exclude>
-                </excludes>
-            </testResource>
-        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -187,7 +176,7 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -208,7 +197,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
