--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
                     </archive>
                 </configuration>
             </plugin>
-<!--            <plugin>
+            <!--            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -198,6 +198,18 @@
                     </execution>
                 </executions>
             </plugin>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+                <dependencies>  
+                    <dependency>  
+                        <groupId>org.ow2.asm</groupId>  
+                        <artifactId>asm</artifactId>  
+                        <version>5.0.3</version>  
+                    </dependency>  
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 </project>
