--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
                     </archive>
                 </configuration>
             </plugin>
-            <!--            <plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -197,7 +197,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
