--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
             <artifactId>pitest-command-line</artifactId>
             <version>1.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
