--- a/pom.xml
+++ b/pom.xml
@@ -156,9 +156,9 @@
             <version>1.2.0</version>
         </dependency>
         <dependency>
-            <groupId>jfree</groupId>
+            <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>1.0.13</version>
+            <version>1.0.19</version>
         </dependency>
     </dependencies>
     <properties>
