Added the configuration to exclude test cases from the execution. Also, changed the default folders of the training and caching commands.

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
         </dependency>
     </dependencies>
     <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <excludes>
+                    <exclude>br/**</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
